--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -65,6 +65,14 @@
             <div class="box about">
               <p class="title is-5">About Me</p>
               <p class="subtitle">{{ data[title]['about'] }}</p>
+
+
+<div class="buttons is-centered">
+  {% for anchor in anchors %}
+  <a href="{{ '#' ~ anchor|lower}}" class="button">{{anchor|lower}}</a>
+  {% endfor %}
+</div>
+
             </div>
           </div>
         </div>
@@ -94,16 +102,16 @@
 
   
   
-  <section class="hero has-jungle-bg is-fullheight">
+  <section id="experience" class="hero has-jungle-bg is-fullheight">
     <div class="hero-body">
       <div class="container has-text-centered">
-        <h1 class="title is-1 is-uppercase has-text-white ">Work Experience</h1>
+        <h1 class="title is-1 is-uppercase has-text-white ">Experience</h1>
         <div class="columns is-centered">
 
           <!-- start card -->
 
           {% for experience in data[title]['experience'] %}
-          <div class="column is-half">
+          <div class="column is-two-fifths">
 
 
             <div class="card">
@@ -140,9 +148,9 @@
   </section>
 
   <!-- EDUCATION START-->
-  <section class="hero has-nft-bg is-fullheight">
+  <section id="education" class="hero has-nft-bg is-fullheight">
     <div class="hero-body">
-      <div class="container has-text-centered">
+      <div class="container has-text-centered p-6">
         <h1 class="title is-1 is-uppercase has-text-white">Education</h1>
 
         {% for school in data[title]['schools'] %}
@@ -177,9 +185,9 @@
     </div>
   </section>
 
-  <section class="hero has-background-info is-fullheight">
+  <section id="projects" class="hero has-background-info is-fullheight">
     <div class="hero-body">
-      <div class="container has-text-centered">
+      <div class="container has-text-centered p-6">
         <h1 class="title is-1 is-uppercase has-text-white">Projects</h1>
 
         {% for project in data[title]['projects'] %}
@@ -227,9 +235,9 @@
     </div>
   </section>
 
-  <section class="hero has-hobbies-bg is-fullheight">
+  <section id="hobbies" class="hero has-hobbies-bg is-fullheight">
     <div class="hero-body">
-      <div class="container has-text-centered">
+      <div class="container has-text-centered p-6">
         <h1 class="title is-1 is-uppercase has-text-white">Hobbies</h1>
         <div class="columns">
           {% for hobbies in data[title]['hobbies'] %}
@@ -255,7 +263,7 @@
 
   <div id="map" style="width: 100%; height: 100%; position: relative;"></div>
 
-  <section class="hero has-jungle-bg is-fullheight">
+  <section id="contact" class="hero has-jungle-bg is-fullheight">
     <div class="hero-body">
       <div class="container is-fluid">
         <div class="columns is-vcentered">
@@ -269,11 +277,18 @@
 
           <div class="column">
 
+                <form method="post" id="contact-form">
+            
+
+            <input type="hidden" id="receiver_name" name="receiver_name" value="{{ data[title]['name']}}">   
+            
+            <input type="hidden" id="receiver_email" name="receiver_email" value="{{data[title]['social'][2]['val']}}">      
+
             <div class="block">
 
               <div class="field">
                 <div class="control has-icons-left">
-                  <input class="input is-large" type="text" placeholder="Name">
+                  <input name="name" id="name" class="input is-large" type="text" placeholder="Name">
                   <span class="icon is-large is-left">
                     <i class="fas fa-user"></i>
                   </span>
@@ -281,8 +296,17 @@
               </div>
 
               <div class="field">
+                            <div class="control has-icons-left">
+                                <input name="subject" id="subject" class="input is-large" type="text" placeholder="Subject">
+                                <span class="icon is-large is-left">
+                                <i class="fas fa-eraser"></i>
+                                </span>
+                            </div>
+              </div>
+
+              <div class="field">
                 <div class="control has-icons-left">
-                  <input class="input is-large" type="text" placeholder="Email">
+                  <input name="email" id="email" class="input is-large" type="text" placeholder="Email">
                   <span class="icon is-large is-left">
                     <i class="fas fa-envelope"></i>
                   </span>
@@ -291,7 +315,7 @@
 
               <div class="field">
                 <div class="control has-icons-left">
-                  <textarea class="textarea is-large" placeholder="Message"></textarea>
+                  <textarea name="message" id="message" class="textarea is-large" placeholder="Message"></textarea>
 
 
                 </div>
@@ -299,18 +323,22 @@
 
             </div>
 
-            <div class="block">
-
-
-              <div class="field is-grouped is-grouped-centered">
-                <p class="control">
-                  <a class="button is-rounded is-large is-primary has-background-white has-text-primary-dark">
-                    Submit
-                  </a>
-                </p>
-              </div>
-
+           <div class="block">
+                        <div class="field is-grouped is-grouped-centered">
+                            <p class="control">
+                                <button name="submit" id="submit" value="submit" type="submit" class="button is-rounded is-large is-primary has-background-white has-text-primary-dark">
+                                Submit
+                                </button>
+                            </p>
+                        </div>
             </div>
+
+            <div class="block">
+                      <p id="success-notification"></p>
+          </div>
+
+            </form>
+
           </div>
         </div>
       </div>
@@ -331,7 +359,8 @@
           <a href={{data[title]['social'][1]['val']}} target="_blank" rel="noreferrer noopener">
             <button class="button is-large">
               <span class="icon is-medium">
-                <i class="fab fa-linkedin"></i>
+                   <i class="fab fa-github"></i>
+               
               </span>
               <span>{{data[title]['social'][1]['name']}}</span>
             </button>
@@ -340,7 +369,7 @@
           <a href={{data[title]['social'][0]['val']}} target="_blank" rel="noreferrer noopener">
             <button class="button is-large">
               <span class="icon is-medium">
-                <i class="fab fa-github"></i>
+               <i class="fab fa-linkedin"></i>
               </span>
               <span>{{data[title]['social'][0]['name']}}</span>
             </button>
@@ -464,6 +493,36 @@
     }
   </script>
 
+
+  <script src="https://code.jquery.com/jquery-3.5.1.js"
+          integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+          crossorigin="anonymous"></script>
+ 
+  <script type="text/javascript">
+    $(document).on('submit','#contact-form',function(e)
+                   {
+      console.log('hello');
+      e.preventDefault();
+      $.ajax({
+        type:'POST',
+        url:'/contact',
+        data:{
+          name:$("#name").val(),
+          subject:$("#subject").val(),
+          email:$("#email").val(),
+          message:$("#message").val(),
+          receiver_name:$("#receiver_name").val(),
+          receiver_email:$("#receiver_email").val()
+        },
+        success:function()
+        {
+          $('input[type="text"],textarea').val('');
+          $("#submit").remove()
+          $("#success-notification").text = "Message successfully sent"
+        }
+      })
+    });
+  </script>
 
 
 
