--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -198,8 +198,8 @@
         <div class="block">
           <div class="card">
             <div class="card-content">
-              <div class="columns is-gapless is-vcentered is-centered">
-                <div class="column">
+              <div class="columns is-vcentered is-centered">
+                <div class="column is-three-fifths">
                   <h1 class="title is-1">{{project.title}}</h1>
                   <!-- <h1 class="subtitle is-3">{{project.link}}</h1> -->
                   <div class="block is-centered">
@@ -211,8 +211,10 @@
                       {% endfor %}
 </div>
 
-                    <div class="tags is-centered">
+                    <div class="buttons is-centered">
                       
+                      {% if project.link %}
+
                       <a href={{project.link}} target="_blank" rel="noreferrer noopener">
                       <button class="button is-large is-danger is-rounded">
                         <span class="icon is-medium">
@@ -222,6 +224,25 @@
                         <span>Link</span>
                       </button>
                       </a>
+                      
+                      {% endif %}
+
+                      {% if project.repo %}
+
+                          <a href={{project.repo}} target="_blank" rel="noreferrer noopener">
+                      <button class="button is-large is-danger is-rounded">
+                        <span class="icon is-medium">
+                          <i class="fab fa-github-alt"></i>
+                        </span> 
+                          
+                        <span>Repository</span>
+                      </button>
+                      </a>
+
+                      {% endif %}
+
+
+
                     </div>
                   </div>
                 </div>
