--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -25,7 +25,7 @@
         404 Not Found
       </p>
      
-      <a href="/hadi"class="button">Go to Homepage</a>
+      <a href="{{url_for('index')}}" class="button">Go to Homepage</a>
 
     </div>
   </div>
