--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -68,7 +68,7 @@
   </nav>
   <!--Navbar end-->
   
-  <section class="hero has-background-info is-fullheight p-6">
+  <section class="hero has-jungle-bg is-fullheight p-6">
     <div class="hero-body p-6">
       <div class="container has-text-centered">
         <div class="column is-8 is-offset-2">
@@ -123,7 +123,7 @@
 
   
   {% if data[title]['experience'] %}
-  <section id="experience" class="hero has-jungle-bg is-fullheight">
+  <section id="experience" class="hero has-nft-bg is-fullheight">
     <div class="hero-body">
       <div class="container has-text-centered">
         <h1 class="title is-1 is-uppercase has-text-white ">Experience</h1>
@@ -170,7 +170,7 @@
   {% endif %}
 
   <!-- EDUCATION START-->
-  <section id="education" class="hero has-nft-bg is-fullheight">
+  <section id="education" class="hero has-jungle-bg is-fullheight">
     <div class="hero-body">
       <div class="container has-text-centered p-6">
         <h1 class="title is-1 is-uppercase has-text-white">Education</h1>
@@ -208,7 +208,7 @@
     </div>
   </section>
 
-  <section id="projects" class="hero has-background-info is-fullheight">
+  <section id="projects" class="hero has-nft-bg is-fullheight">
     <div class="hero-body">
       <div class="container has-text-centered p-6">
         <h1 class="title is-1 is-uppercase has-text-white">Projects</h1>
@@ -280,7 +280,7 @@
   </section>
 
 
- <section class="hero is-black is-fullheight p-6 has-text-centered">
+ <section class="hero is-black has-jungle-bg is-fullheight p-6 has-text-centered">
 
   <h1 class="title is-1 has-text-white is-uppercase">Trivia Board</h1>
 
@@ -305,7 +305,7 @@
 
 </section>
 
-  <section id="hobbies" class="hero has-hobbies-bg is-fullheight">
+  <section id="hobbies" class="hero has-nft-bg is-fullheight">
     <div class="hero-body">
       <div class="container has-text-centered p-6">
         <h1 class="title is-1 is-uppercase has-text-white">Hobbies</h1>
