--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -7,6 +7,7 @@
 
   <title>404 Not Found</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='img/ape.png')}}">
   <script src="https://kit.fontawesome.com/6f97194b39.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../static/styles/main.css">
 
@@ -19,13 +20,16 @@
 
 
   <!-- Hero content: will be in the middle -->
-  <div class="hero-body">
+  <div class="hero-body has-jungle-bg">
     <div class="container has-text-centered">
-      <p class="title">
+      
+  <img class="is-rounded" src="{{ url_for('static', filename='img/ape.png') }}" width="300" height="300">
+
+      <p class="title is-1">
         404 Not Found
       </p>
      
-      <a href="{{url_for('index')}}" class="button">Go to Homepage</a>
+      <a href="{{url_for('index')}}" class="button">Go to the Homepage</a>
 
     </div>
   </div>
