--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -285,7 +285,7 @@
 
 {% if data[title]['trivias'] %}
 
- <section class="hero is-black has-jungle-bg is-fullheight p-6 has-text-centered">
+ <section id="trivia" class="hero is-black has-jungle-bg is-fullheight p-6 has-text-centered">
 
   <h1 class="title is-1 has-text-white is-uppercase">Trivia Board</h1>
 
