--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -12,8 +12,13 @@
 
 {% include 'components/trivias.html' %}
 
+{% include 'components/hobbies.html' %}
+
 {% include 'components/map.html' %}
+
+{% include 'components/contact.html' %}
 
 {% include 'components/footer.html' %}
 
 {% endblock %}
+
