--- a/app/templates/pages/timeline.html
+++ b/app/templates/pages/timeline.html
@@ -12,14 +12,14 @@
     
     <div class="card">
 
-  <!-- <header class="card-header">
+  <header class="card-header">
     <p class="card-header-title">
-      {{post.name}} ({{post.email}})
+      {{post.created_at.strftime("%b %d, %Y (%I:%M %p)" )}}
     </p>
-    <button class="card-header-icon" aria-label="more options">
+    <!-- <button class="card-header-icon" aria-label="more options">
          <p class="has-text-weight-bold">{{post.created_at}}</p>
-    </button>
-  </header> -->
+    </button> -->
+  </header>
 
   
 
