--- a/app/templates/pages/timeline.html
+++ b/app/templates/pages/timeline.html
@@ -8,6 +8,10 @@
 <div class="columns is-centered">
 <div class="column is-three-quarters">
 
+<div class="box">
+
+<h1 class="title">Add to Timeline</h1>
+
 <form id="form" method="post">
 
 <div class="field">
@@ -39,25 +43,31 @@
   <div class="control">
     <button type="submit" class="button is-link">Submit</button>
   </div>
-  <!-- <div class="control">
-    <button class="button is-link is-light">Cancel</button>
-  </div> -->
+  <div class="control">
+    <button type="reset" onClick="resetForm()" class="button is-link is-light">Clear</button>
+  </div>
 </div>
+
 
 
 </form>
 
+</div>
 
 </div>
 
 
 
 </div>
+
+ <h1 class="title is-1 has-text-centered">{{posts|length}} Timeline Posts</h1>
 
      {% for post in posts %}
     
 <div class="columns is-centered">
+
   
+
   <div class="column is-three-quarters">
     
     <div class="card">
@@ -126,13 +136,13 @@
       return response.json();
     }
 
-    // function addShow(data) {
-    //   var span = document.getElementById('result');
-    //   span.innerText = data.result;
-    // }
+    function resetForm(){
+        document.getElementById('form').reset();
+    }
 
     var form = document.getElementById('form');
     form.addEventListener('submit', addSubmit);
+
   </script>
 
 {% endblock %}
